<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/grupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/tenis"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/opcion1"
            />
        <RadioButton
            android:id="@+id/ajedrez"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/opcion2"
            />
        <RadioButton
            android:id="@+id/baloncesto"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/opcion3"
            />
        <RadioButton
            android:id="@+id/natacion"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/opcion4"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/textobox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ha marcado la opcion"
        />

</LinearLayout>