<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/grupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/verdadero"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/opcionv"
            />
        <RadioButton
            android:id="@+id/falso"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/opcionf"
            />

    </RadioGroup>

    <TextView
        android:id="@+id/textobox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textopcion"
        />

</LinearLayout>