<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            >
        <TextView
            android:id="@+id/tit_nombre"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nombre_v2"
            android:textColor="@color/purple_500"
            android:gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:typeface="monospace"
            />
            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre2"
                android:textAlignment="center"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:background="@color/purple_200"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/tit_correo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:gravity="center_vertical"
                android:text="@string/edad"
                android:textColor="@color/purple_500"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edad2"
                android:textAlignment="center"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:background="@color/purple_200"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="30dp">
            </EditText>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1.1">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tit_sexo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sexo"
                android:textColor="@color/purple_500"
                android:gravity="center"
                android:layout_marginLeft="50dp"
                android:typeface="monospace"
                />
        </LinearLayout>
       <LinearLayout
           xmlns:android="http://schemas.android.com/apk/res/android"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_gravity="center"
           android:layout_weight="1">
            <RadioGroup
                android:id="@+id/grupo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_gravity="center">
                <RadioButton
                    android:id="@+id/mujer"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sexof"
                    android:layout_marginLeft="4dp"
                    android:buttonTint="@color/purple_500"
                    />
                <RadioButton
                    android:id="@+id/hombre"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sexom"
                    android:layout_marginLeft="4dp"
                    android:buttonTint="@color/purple_500"
                    />
                <RadioButton
                    android:id="@+id/otro"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sexootro"
                    android:layout_marginLeft="4dp"
                    android:buttonTint="@color/purple_500"
                    />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.15"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tit_profesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profesion"
            android:textColor="@color/purple_500"
            android:gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:typeface="monospace"
            />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/valoreswork"
            android:background="@color/purple_200"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"></Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1.1">
        <TextView
            android:id="@+id/tit_aficiones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            android:textColor="@color/purple_500"
            android:gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:typeface="monospace"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/baloncesto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/opciona"
                android:buttonTint="@color/purple_500"
                />

            <CheckBox
                android:id="@+id/malabares"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/opcionb"
                android:buttonTint="@color/purple_500"
                />

            <CheckBox
                android:id="@+id/teatro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/opcionc"
                android:buttonTint="@color/purple_500"/>
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
            <Button
                android:id="@+id/botonsend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_style"
                android:text="@string/send"
                android:layout_gravity="center"
                />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
            <Button
                android:id="@+id/botonclear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/boton_style"
                android:text="@string/clear"
                />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8">

            <TextView
                android:id="@+id/resultado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/resultado_texto" />
        </LinearLayout>


    </LinearLayout>