<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
    <TextView
        android:id="@+id/tit_nombre"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/nombre"
        android:textColor="@color/purple_500"
        android:gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:typeface="monospace"
        />
        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nombre2"
            android:textAlignment="center"
            android:inputType="text"
            android:imeOptions="actionDone">
        </EditText>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <TextView
            android:id="@+id/tit_correo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/correo"
            android:textColor="@color/purple_500"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:typeface="monospace"
            />
        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/correo2"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone">
        </EditText>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tit_telf"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/telefono"
            android:textColor="@color/purple_500"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:typeface="monospace"

            />
        <EditText
            android:id="@+id/telf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/telefono2"
            android:textAlignment="center"
            android:inputType="phone"
            android:imeOptions="actionDone">
        </EditText>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >

    <Button
        android:id="@+id/boton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/boton"
        android:background="@drawable/boton_style"

        />
    </LinearLayout>
</LinearLayout>
    <!--android.widget.Button  POR SI EL BOTON NO COGE EL COLOR-->
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_700"/>
    </LinearLayout>



</LinearLayout>