<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ToggleButton
        android:id="@+id/BtnToggle"
        android:layout_below="@+id/textoboton"
        android:textOn="@string/botonon"
        android:textOff="@string/botonoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/toggleboton_style"/>
    <TextView
        android:id="@+id/textoboton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HOLA"
        android:textColor="@color/purple_500"
        android:gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:typeface="monospace"/>
    <ImageButton
        android:id="@+id/BtnImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="estrella"
        android:src="@drawable/ic_estrella"
        />
    <Button
        android:id="@+id/BtnBotonMasImagen"
        android:drawableLeft="@drawable/ic_estrella"
        android:drawablePadding="3dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/boton"
        android:background="@drawable/botonimg_style"/>

    <Switch
        android:id="@+id/BtnSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textOff="@string/botonoff"
        android:textOn="@string/botonon" />

</LinearLayout>